<resources>
    <string name="app_name">Dolphin Enhanced</string>
    <string name="app_name_version">Dolphin %1$s</string>
    <string name="host">app</string>
    <string name="scheme">dolphinemu</string>
    <string name="controller_0">GameCube Controller 1</string>
    <string name="controller_1">GameCube Controller 2</string>
    <string name="controller_2">GameCube Controller 3</string>
    <string name="controller_3">GameCube Controller 4</string>
    <string name="wiimote_hotkeys">Hotkeys</string>
    <string name="controller_control">Control Stick</string>
    <string name="controller_c">C Stick</string>
    <string name="controller_trig">Triggers</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="modifier_range">Modifier Range</string>
    <string name="analog_radius">Analog Radius (High value = High sensitivity)</string>
    <string name="analog_threshold">Analog Threshold (Low value = High sensitivity)</string>
    <string name="wiimote_4">Wii Remote 1</string>
    <string name="wiimote_5">Wii Remote 2</string>
    <string name="wiimote_6">Wii Remote 3</string>
    <string name="wiimote_7">Wii Remote 4</string>
    <string name="wiimote_extension_4">Wii Remote Extension 1</string>
    <string name="wiimote_extension_5">Wii Remote Extension 2</string>
    <string name="wiimote_extension_6">Wii Remote Extension 3</string>
    <string name="wiimote_extension_7">Wii Remote Extension 4</string>
    <string name="wiimote_extensions">Extension</string>
    <string name="wiimote_extensions_description">Choose and bind the Wii Remote extension.</string>
    <string name="wiimote_ir">IR</string>
    <string name="wiimote_swing">Swing</string>
    <string name="wiimote_tilt">Tilt</string>
    <string name="wiimote_shake">Shake</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_description">Press or move an input to bind it to &lt;b>%1$s&lt;/b>.</string>
    <string name="input_rumble_description">Press or move any input to set &lt;b>rumble&lt;/b>.</string>
    <string name="generic_buttons">Buttons</string>
    <string name="generic_up">Up</string>
    <string name="generic_down">Down</string>
    <string name="generic_left">Left</string>
    <string name="generic_right">Right</string>
    <string name="generic_forward">Forward</string>
    <string name="generic_backward">Backward</string>
    <string name="generic_stick">Stick</string>
    <string name="generic_green">Green</string>
    <string name="generic_red">Red</string>
    <string name="generic_yellow">Yellow</string>
    <string name="generic_blue">Blue</string>
    <string name="generic_orange">Orange</string>
    <string name="hotkey_sideways_toggle">Sideways Toggle</string>
    <string name="hotkey_upright_toggle">Upright Toggle</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_start">START</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="trigger_left">L</string>
    <string name="trigger_right">R</string>
    <string name="trigger_left_analog">L Analog</string>
    <string name="trigger_right_analog">R Analog</string>
    <string name="system_back">System Back</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_home">HOME</string>
    <string name="ir_hide">Hide</string>
    <string name="tilt_modifier">Modifier</string>
    <string name="shake_x">X</string>
    <string name="shake_y">Y</string>
    <string name="shake_z">Z</string>
    <string name="nunchuk_button_c">C</string>
    <string name="classic_button_zl">ZL</string>
    <string name="classic_button_zr">ZR</string>
    <string name="classic_leftstick">Left Stick</string>
    <string name="classic_rightstick">Right Stick</string>
    <string name="guitar_frets">Frets</string>
    <string name="guitar_strum">Strum</string>
    <string name="guitar_whammy">Whammy</string>
    <string name="guitar_whammy_bar">Bar</string>
    <string name="drums_pads">Pads</string>
    <string name="drums_pad_bass">Bass</string>
    <string name="turntable_button_green_left">Green Left</string>
    <string name="turntable_button_red_left">Red Left</string>
    <string name="turntable_button_blue_left">Blue Left</string>
    <string name="turntable_button_green_right">Green Right</string>
    <string name="turntable_button_red_right">Red Right</string>
    <string name="turntable_button_blue_right">Blue Right</string>
    <string name="turntable_button_euphoria">Euphoria</string>
    <string name="turntable_table_left">Table Left</string>
    <string name="turntable_table_right">Table Right</string>
    <string name="turntable_effect">Effect</string>
    <string name="turntable_effect_dial">Dial</string>
    <string name="turntable_crossfade">Crossfade</string>
    <string name="general_submenu">General</string>
    <string name="cpu_core">CPU Core</string>
    <string name="cpu_core_description">%s</string>
    <string name="dual_core">Dual Core</string>
    <string name="dual_core_description">Split workload to two CPU cores instead of one. Increases speed.</string>
    <string name="overclock_enable">Override Emulated CPU Clock Speed</string>
    <string name="overclock_enable_description">Higher values can make variable-framerate games run at a higher framerate, requiring a powerful device.</string>
    <string name="overclock_title">Emulated CPU Clock Speed</string>
    <string name="overclock_title_description">Adjusts the emulated CPU\'s clock rate if \"Override Emulated CPU Clock Speed\" is enabled.</string>
    <string name="speed_limit">Speed Limit</string>
    <string name="overclock_warning">WARNING: Changing this from the default (100%) WILL break games and cause glitches. Please do not report bugs that occur with a non-default clock.</string>
    <string name="gamecube_submenu">GameCube</string>
    <string name="gamecube_system_language">System Language</string>
    <string name="slot_a_device">Slot A Device</string>
    <string name="slot_b_device">Slot B Device</string>
    <string name="serial_port_1">Serial Port 1</string>
    <string name="wii_submenu">Wii</string>
    <string name="wiimote_scanning">Wii Remote Continuous Scanning</string>
    <string name="wiimote_scanning_description">Leave this on if you are using a DolphinBar for real Wiimote support.</string>
    <string name="wiimote_speaker">Wii Remote Speaker</string>
    <string name="wiimote_speaker_description">Enable sound output through the speaker on a real Wiimote (DolphinBar required).</string>
    <string name="wii_sd_card">Insert SD Card</string>
    <string name="wii_sd_card_description">Saved to /Wii/sd.raw (default size is 128mb).</string>
    <string name="audio_stretch">Audio Stretching</string>
    <string name="audio_stretch_description">Stretches audio to reduce stuttering. Increases latency.</string>
    <string name="audio_stretch_max_latency">Stretching Buffer Size</string>
    <string name="audio_stretch_max_latency_description">Size of audio stretch buffer in milliseconds. Values too low may cause audio crackling.</string>
    <string name="sync_on_skip_idle">Sync On Skip Idle</string>
    <string name="sync_on_skip_idle_description">Wait to process events until the GPU thread finished.</string>
    <string name="sync_gpu_overclock">Sync GPU Overclock</string>
    <string name="sync_gpu_overclock_description">Set time threshold to sync with GPU thread.</string>
    <string name="mmu_enable">Enable MMU</string>
    <string name="mmu_enable_description">Enables the Memory Management Unit. Needed for some games, but may reduce performance.</string>
    <string name="fast_disc_speed">Fast Disc Speed</string>
    <string name="fast_disc_speed_description">Accelerates the emulated disc speed, reducing loading times. Some games that rely on accurate disc speed emulation could become unstable, fail to read data and crash.</string>
    <string name="jit_follow_branch">JIT Follow Branch</string>
    <string name="jit_follow_branch_description">JIT follow branch is great improve performance, but some games will crash with this enabled.</string>
    <string name="audio_backend">Audio Backend</string>
    <string name="audio_backend_description">Set backend used for audio output.</string>
    <string name="vsync">V-Sync</string>
    <string name="vsync_description">This setting is unnecessary on most Android devices, because Android always enables V-Sync. If unsure, leave this unchecked.</string>
    <string name="enable_cheats">Enable Cheats</string>
    <string name="enable_cheats_description">Put AR &amp; Gecko Codes in game setting file.</string>
    <string name="override_region_settings">Allow Mismatched Region Settings</string>
    <string name="auto_disc_change">Change Discs Automatically</string>
    <string name="memory_override">Memory Override</string>
    <string name="enable_memory_size_override">Enable Emulated Memory Size Override</string>
    <string name="enable_memory_size_override_description">Adjusts the amount of RAM in the emulated console.\n\nWARNING: Enabling this will completely break many games. Only a small number of games can benefit from this.</string>
    <string name="main_mem1_size">MEM1 Size</string>
    <string name="main_mem2_size">MEM2 Size</string>
    <string name="interface_submenu">Interface</string>
    <string name="expand_to_cutout_area">Expand to Cutout Area</string>
    <string name="expand_to_cutout_area_description">Expands the display area to include the cutout (or notch) area.</string>
    <string name="design">Change Theme (Light, Dark)</string>
    <string name="panic_handlers">Use Panic Handlers</string>
    <string name="panic_handlers_description">Show a message box when a potentially serious error has occurred. Disabling this may avoid annoying and non-fatal messages.</string>
    <string name="osd_messages">Show On-Screen Display Messages</string>
    <string name="show_fps">Show FPS</string>
    <string name="arbitrary_mipmap_detection">Arbitrary Mipmap Detection</string>
    <string name="skip_efb_access">Skip EFB Access from CPU</string>
    <string name="ignore_format_changes">Ignore Format Changes</string>
    <string name="efb_copy_method">Store EFB Copies to Texture Only</string>
    <string name="immediate_xfb">Immediately Present XFB</string>
    <string name="vi_skip">VBI Skip</string>
    <string name="preferences_settings">Settings</string>
    <string name="emulation_screenshot">Take Screenshot</string>
    <string name="emulation_exit">Exit Emulation</string>
    <string name="emulation_quicksave">Quick Save</string>
    <string name="emulation_quickload">Quick Load</string>
    <string name="emulation_edit_layout">Edit Layout</string>
    <string name="emulation_toggle_controls">Toggle Controls</string>
    <string name="emulation_control_adjust">Adjust Controls</string>
    <string name="emulation_control_scale">Adjust Scale</string>
    <string name="emulation_control_rumble">Rumble</string>
    <string name="state_saves">State Saves</string>
    <string name="touch_screen_pointer">Touch Screen emulate IR</string>
    <string name="touch_screen_pointer_recenter">IR always back to center</string>
    <string name="joystick_relative_center">Joystick use relative center</string>
    <string name="pitch">Total Pitch</string>
    <string name="yaw">Total Yaw</string>
    <string name="vertical_offset">Vertical Offset</string>
    <string name="core_settings">Cpre</string>
    <string name="graphics_settings">Graphics</string>
    <string name="ir_mode">Ir mode</string>
</resources>